Hacker news complete...almost

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,12 +1,13 @@
+<%= erb :"partials/_nav", layout: false %>
+<div class="container">
 
   <ol>
     <% @posts.each do |post| %>
-    <li>
+    <li class="<%= post.id %>">
       <a href="<%= post.url %>"><%= post.title%></a>
       <span>(<%= clean_link(post.url) %>)</span>
       <small><%= post.postvotes.count %> points by <%= post.user.name %> <%= (post.created_at).ago_in_words %> | <a href="/posts/<%= post.id%>"><%= post.comments.count%> comments</a></small>
-      <%= erb :"partials/_vote", layout: false, locals: {post: post} %>
-       
+       <%= erb :"partials/_vote", layout: false, locals: {post: post} %>
     </li>
   <% end %>
   </ol>
