--- a/app/views/partials/_vote.erb
+++ b/app/views/partials/_vote.erb
@@ -1,8 +1,10 @@
  <% if current_user %>
       <% unless post.user.id == current_user.id || post.postvotes.find_by_user_id(current_user.id) %>
       
-      <form action="<%= current_user.id%>/<%= post.id%>/postvotes/new" method="post">
-        <input type="submit" value="vote">
+      <form class="vote" action="<%= current_user.id%>/<%= post.id%>/postvotes/new" method="post">
+        <input class="vote"type="submit" value="">
       </form>
       <% end %>
 <% end %>
+
+
