--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -1,35 +1,40 @@
-<h1>This is <%= @post.user%>'s post</h1>
+<%= erb :"partials/_nav", layout: false %>
 
-<%= @post.title %>
-<%= @post.url %>
+<div class="container">
+
+
+<ol class="show">
+<li class="<%= @post.id %>" id="post">
+      <a href="<%= @post.url %>"><%= @post.title%></a>
+      <span>(<%= clean_link(@post.url) %>)</span>
+      <small><%= @post.postvotes.count %> points by <%= @post.user.name %> <%= (@post.created_at).ago_in_words %> | <ahref="/posts/<%= @post.id%>"><%= @post.comments.count%> comments</a></small>
+       <%= erb :"partials/_vote", layout: false, locals: {post: @post} %>
+</li>
+</ol>
+
 
 
 <form action="/posts/<%= @post.id%>/comments/new" method="post">
-
-  <fieldset>
-      <legend>Comment</legend>
-
-      <label for="body">body</label>
-      <input type="text" name="body">
-      <input type="submit" value="submit">
-
-
-  </fieldset>
+      <textarea name="body" rows="4" cols="50"></textarea>
+      <input type="submit" value="add comment">
 </form>
 
 
-<section>
+<section class="comments">
 
   <% @post.comments.each do |comment| %>
- <p><%= comment.body %> <span><%= comment.commentvotes.count%></span></p>
+  	<%= erb :"partials/_commentvote", layout: false, locals: { comment: comment } %>
+  <small><%= comment.user.name%> <%= (comment.created_at).ago_in_words%>
+  </small>
+ <p><%= comment.body %> <span><a href="/comments/<%= comment.id %>">reply</a></span> </p>
 
-<form action="/<%= current_user.id %>/<%= comment.id %>/commentvotes/new" method="post">
-  <input type="submit" value="vote">
-</form>
+ 
 
  <% end %>
 
 </section>
+
+
 
 
 
