--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -14,3 +14,20 @@
 
   <%= will_paginate @posts %>
 
+  <footer>
+    
+    <ul>
+      <li>Lists</li>
+      <li>RSS</li>
+      <li>Bookmarklet</li>
+      <li>Guidelines</li>
+      <li>FAQ</li>
+      <li>DMCA</li>
+      <li>News News</li>
+      <li>Feature Requests</li>
+      <li>Y Combinator</li>
+      <li>Apply</li>
+      <li>Library</li>
+    </ul>
+</footer>
+
