--- a/app/views/partials/_nav.erb
+++ b/app/views/partials/_nav.erb
@@ -19,8 +19,7 @@
             </form>
             </li>
           <% else %>
-          <li><a href="/users/new">signup</a></li>
-          <li><a href="/users/login">Login</a></li>
+          <li class="login"><a href="/users/login">Login</a></li>
           <% end %>
       </ul>
     </nav>
