--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,5 +1,5 @@
-
-<form action='/users/new' method='post'>
+<h4>Create Account</h4>
+<form class="signup"action='/users/new' method='post'>
 
   <label for="name">Name</label>
   <input type="text" name="name">
@@ -14,3 +14,18 @@
   <input type="password" name="confirm_password">
   <input type="submit" value="submit" >
 </form>
+
+
+<h4>Login</h4>
+
+<form action='/users/login' method='post'>
+
+  <label for="email">Email</label>
+  <input type="text" name="email">
+
+  <label for="password">Password</label>
+  <input type="password" name="password">
+
+  <input type="submit" value="submit" >
+</form>
+
