--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -7,7 +7,7 @@
 <li class="<%= @post.id %>" id="post">
       <a href="<%= @post.url %>"><%= @post.title%></a>
       <span>(<%= clean_link(@post.url) %>)</span>
-      <small><%= @post.postvotes.count %> points by <%= @post.user.name %> <%= (@post.created_at).ago_in_words %> | <ahref="/posts/<%= @post.id%>"><%= @post.comments.count%> comments</a></small>
+      <small><%= @post.postvotes.count %> points by <%= @post.user.name %> <%= (@post.created_at) %> | <ahref="/posts/<%= @post.id%>"><%= @post.comments.count%> comments</a></small>
        <%= erb :"partials/_vote", layout: false, locals: {post: @post} %>
 </li>
 </ol>
